@@ -7,10 +7,13 @@ import com.triptune.domain.member.entity.ProfileImage;
 import com.triptune.domain.member.repository.MemberRepository;
 import com.triptune.domain.member.repository.ProfileImageRepository;
 import com.triptune.domain.schedule.ScheduleTest;
-import com.triptune.domain.schedule.dto.CreateScheduleRequest;
+import com.triptune.domain.schedule.dto.request.CreateScheduleRequest;
+import com.triptune.domain.schedule.dto.request.RouteRequest;
+import com.triptune.domain.schedule.dto.request.UpdateScheduleRequest;
 import com.triptune.domain.schedule.entity.TravelAttendee;
 import com.triptune.domain.schedule.entity.TravelRoute;
 import com.triptune.domain.schedule.entity.TravelSchedule;
+import com.triptune.domain.schedule.enumclass.AttendeePermission;
 import com.triptune.domain.schedule.enumclass.AttendeeRole;
 import com.triptune.domain.schedule.repository.TravelAttendeeRepository;
 import com.triptune.domain.schedule.repository.TravelRouteRepository;
@@ -20,14 +23,12 @@ import com.triptune.domain.travel.entity.TravelPlace;
 import com.triptune.domain.travel.repository.TravelImageRepository;
 import com.triptune.domain.travel.repository.TravelPlacePlaceRepository;
 import com.triptune.global.enumclass.ErrorCode;
-import com.triptune.global.util.PageUtil;
+import org.hibernate.sql.Update;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.ActiveProfiles;
@@ -44,11 +45,8 @@ import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
 import static org.springframework.security.test.web.servlet.setup.SecurityMockMvcConfigurers.springSecurity;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
@@ -73,6 +71,18 @@ public class ScheduleApiControllerTests extends ScheduleTest {
     private final ProfileImageRepository profileImageRepository;
 
     private MockMvc mockMvc;
+
+    private Member member1;
+    private Member member2;
+    private Member member3;
+
+    private TravelSchedule schedule1;
+    private TravelSchedule schedule2;
+    private TravelSchedule schedule3;
+
+    private TravelPlace travelPlace1;
+    private TravelPlace travelPlace2;
+
 
     @Autowired
     public ScheduleApiControllerTests(WebApplicationContext wac, TravelScheduleRepository travelScheduleRepository, TravelAttendeeRepository travelAttendeeRepository, MemberRepository memberRepository, TravelPlacePlaceRepository travelPlaceRepository, CountryRepository countryRepository, CityRepository cityRepository, DistrictRepository districtRepository, ApiCategoryRepository apiCategoryRepository, FileRepository fileRepository, TravelImageRepository travelImageRepository, TravelRouteRepository travelRouteRepository, ApiContentTypeRepository apiContentTypeRepository, ProfileImageRepository profileImageRepository) {
@@ -100,6 +110,41 @@ public class ScheduleApiControllerTests extends ScheduleTest {
                 .alwaysDo(print())
                 .build();
 
+        member1 = memberRepository.save(createMember(null, "member1"));
+        member2 = memberRepository.save(createMember(null, "member2"));
+        member3 = memberRepository.save(createMember(null, "member3"));
+        ProfileImage profileImage1 = profileImageRepository.save(createProfileImage(null, "member1Image"));
+        ProfileImage profileImage2 = profileImageRepository.save(createProfileImage(null, "member2Image"));
+        ProfileImage profileImage3 = profileImageRepository.save(createProfileImage(null, "member3Image"));
+        member1.setProfileImage(profileImage1);
+        member2.setProfileImage(profileImage2);
+        member3.setProfileImage(profileImage3);
+
+        Country country = countryRepository.save(createCountry());
+        City city = cityRepository.save(createCity(country));
+        District district1 = districtRepository.save(createDistrict(city, "강남구"));
+        District district2 = districtRepository.save(createDistrict(city, "중구"));
+        ApiCategory apiCategory = apiCategoryRepository.save(createApiCategory());
+        ApiContentType apiContentType = apiContentTypeRepository.save(createApiContentType("관광지"));
+        travelPlace1 = travelPlaceRepository.save(createTravelPlace(null, country, city, district1, apiCategory));
+        travelPlace2 = travelPlaceRepository.save(createTravelPlace(null, country, city, district2, apiCategory));
+        File file1 = fileRepository.save(createFile("test1", true));
+        File file2 = fileRepository.save(createFile("test2", false));
+        TravelImage travelImage1 = travelImageRepository.save(createTravelImage(travelPlace1, file1));
+        TravelImage travelImage2 = travelImageRepository.save(createTravelImage(travelPlace1, file2));
+        TravelImage travelImage3 = travelImageRepository.save(createTravelImage(travelPlace2, file1));
+        TravelImage travelImage4 = travelImageRepository.save(createTravelImage(travelPlace2, file2));
+        travelPlace1.setApiContentType(apiContentType);
+        travelPlace1.setTravelImageList(Arrays.asList(travelImage1, travelImage2));
+        travelPlace2.setApiContentType(apiContentType);
+        travelPlace2.setTravelImageList(Arrays.asList(travelImage3, travelImage4));
+
+
+        schedule1 = travelScheduleRepository.save(createTravelSchedule(null,"테스트1"));
+        schedule2 = travelScheduleRepository.save(createTravelSchedule(null,"테스트2"));
+        schedule3 = travelScheduleRepository.save(createTravelSchedule(null,"테스트3"));
+
+
     }
 
     @Test
@@ -107,55 +152,24 @@ public class ScheduleApiControllerTests extends ScheduleTest {
     @WithMockUser(username = "member1")
     void getSchedules() throws Exception {
         // given
-        Member member1 = memberRepository.save(createMember(null, "member1"));
-        Member member2 = memberRepository.save(createMember(null, "member2"));
-        ProfileImage profileImage1 = profileImageRepository.save(createProfileImage(null, "member1Image"));
-        ProfileImage profileImage2 = profileImageRepository.save(createProfileImage(null, "member2Image"));
-        member1.setProfileImage(profileImage1);
-        member2.setProfileImage(profileImage2);
-
-        Country country = countryRepository.save(createCountry());
-        City city = cityRepository.save(createCity(country));
-        District district1 = districtRepository.save(createDistrict(city, "강남구"));
-        District district2 = districtRepository.save(createDistrict(city, "성북구"));
-        ApiCategory apiCategory = apiCategoryRepository.save(createApiCategory());
-        ApiContentType apiContentType = apiContentTypeRepository.save(createApiContentType("관광지"));
-        TravelPlace travelPlace1 = travelPlaceRepository.save(createTravelPlace(null, country, city, district1, apiCategory));
-        TravelPlace travelPlace2 = travelPlaceRepository.save(createTravelPlace(null, country, city, district2, apiCategory));
-        File file1 = fileRepository.save(createFile("test1", true));
-        File file2 = fileRepository.save(createFile("test2", false));
-        TravelImage travelImage1 = travelImageRepository.save(createTravelImage(travelPlace1, file1));
-        TravelImage travelImage2 = travelImageRepository.save(createTravelImage(travelPlace1, file2));
-        TravelImage travelImage3 = travelImageRepository.save(createTravelImage(travelPlace2, file1));
-        TravelImage travelImage4 = travelImageRepository.save(createTravelImage(travelPlace2, file2));
-
-        travelPlace1.setApiContentType(apiContentType);
-        travelPlace1.setTravelImageList(Arrays.asList(travelImage1, travelImage2));
-        travelPlace2.setApiContentType(apiContentType);
-        travelPlace2.setTravelImageList(Arrays.asList(travelImage3, travelImage4));
-
-        TravelSchedule schedule1 = travelScheduleRepository.save(createTravelSchedule(null,"테스트1"));
-        TravelSchedule schedule2 = travelScheduleRepository.save(createTravelSchedule(null,"테스트2"));
-        TravelSchedule schedule3 = travelScheduleRepository.save(createTravelSchedule(null,"테스트3"));
-
-        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR));
-        TravelAttendee attendee2 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST));
-        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule2, AttendeeRole.AUTHOR));
-        TravelAttendee attendee4 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule3, AttendeeRole.AUTHOR));
+        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee2 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule2, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
+        TravelAttendee attendee4 = travelAttendeeRepository.save(createTravelAttendee(member3, schedule3, AttendeeRole.AUTHOR, AttendeePermission.ALL));
 
         TravelRoute route1 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 1));
         TravelRoute route2 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace2, 2));
         TravelRoute route3 = travelRouteRepository.save(createTravelRoute(schedule2, travelPlace1, 1));
         TravelRoute route4 = travelRouteRepository.save(createTravelRoute(schedule2, travelPlace2, 2));
 
+        member1.setTravelAttendeeList(List.of(attendee1, attendee2));
+        member2.setTravelAttendeeList(List.of(attendee3));
+        member3.setTravelAttendeeList(List.of(attendee4));
+
         schedule1.setTravelRouteList(Arrays.asList(route1, route2));
         schedule2.setTravelRouteList(Arrays.asList(route3, route4));
-
-        member1.setTravelAttendeeList(Arrays.asList(attendee1, attendee3));
-        member2.setTravelAttendeeList(Arrays.asList(attendee2, attendee4));
-
-        schedule1.setTravelAttendeeList(Arrays.asList(attendee1, attendee2));
-        schedule2.setTravelAttendeeList(List.of(attendee3));
+        schedule1.setTravelAttendeeList(Arrays.asList(attendee1, attendee3));
+        schedule2.setTravelAttendeeList(List.of(attendee2));
         schedule3.setTravelAttendeeList(List.of(attendee4));
 
         // when, then
@@ -166,7 +180,8 @@ public class ScheduleApiControllerTests extends ScheduleTest {
                 .andExpect(jsonPath("$.data.totalSharedElements").value(1))
                 .andExpect(jsonPath("$.data.content[0].sinceUpdate").exists())
                 .andExpect(jsonPath("$.data.content[0].scheduleName").exists())
-                .andExpect(jsonPath("$.data.content[0].thumbnailUrl").exists());
+                .andExpect(jsonPath("$.data.content[0].thumbnailUrl").exists())
+                .andExpect(jsonPath("$.data.content[0].role").exists());
     }
 
     @Test
@@ -174,28 +189,19 @@ public class ScheduleApiControllerTests extends ScheduleTest {
     @WithMockUser(username = "member1")
     void getSchedulesNoRouteData() throws Exception {
         // given
-        Member member1 = memberRepository.save(createMember(null, "member1"));
-        Member member2 = memberRepository.save(createMember(null, "member2"));
-        ProfileImage profileImage1 = profileImageRepository.save(createProfileImage(null, "member1Image"));
-        ProfileImage profileImage2 = profileImageRepository.save(createProfileImage(null, "member2Image"));
-        member1.setProfileImage(profileImage1);
-        member2.setProfileImage(profileImage2);
-
-        TravelSchedule schedule1 = travelScheduleRepository.save(createTravelSchedule(null,"테스트1"));
-        TravelSchedule schedule2 = travelScheduleRepository.save(createTravelSchedule(null,"테스트2"));
-        TravelSchedule schedule3 = travelScheduleRepository.save(createTravelSchedule(null,"테스트3"));
         schedule1.setUpdatedAt(LocalDateTime.now().minusDays(3));
 
-        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR));
-        TravelAttendee attendee2 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST));
-        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule2, AttendeeRole.AUTHOR));
-        TravelAttendee attendee4 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule3, AttendeeRole.AUTHOR));
+        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee2 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule2, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
+        TravelAttendee attendee4 = travelAttendeeRepository.save(createTravelAttendee(member3, schedule3, AttendeeRole.AUTHOR, AttendeePermission.ALL));
 
-        member1.setTravelAttendeeList(Arrays.asList(attendee1, attendee3));
-        member2.setTravelAttendeeList(Arrays.asList(attendee2, attendee4));
+        member1.setTravelAttendeeList(List.of(attendee1, attendee2));
+        member2.setTravelAttendeeList(List.of(attendee3));
+        member3.setTravelAttendeeList(List.of(attendee4));
 
-        schedule1.setTravelAttendeeList(Arrays.asList(attendee1, attendee2));
-        schedule2.setTravelAttendeeList(List.of(attendee3));
+        schedule1.setTravelAttendeeList(Arrays.asList(attendee1, attendee3));
+        schedule2.setTravelAttendeeList(List.of(attendee2));
         schedule3.setTravelAttendeeList(List.of(attendee4));
 
         // when, then
@@ -214,8 +220,6 @@ public class ScheduleApiControllerTests extends ScheduleTest {
     @WithMockUser(username = "member1")
     void getSchedulesWithoutData() throws Exception {
         // given
-        memberRepository.save(createMember(null, "member1"));
-
         // when, then
         mockMvc.perform(get("/api/schedules")
                         .param("page", "1"))
@@ -224,14 +228,12 @@ public class ScheduleApiControllerTests extends ScheduleTest {
                 .andExpect(jsonPath("$.data.content").isEmpty());
     }
 
-
     @Test
     @DisplayName("createSchedule(): 일정 만들기 성공")
     @WithMockUser(username = "member1")
-    void createSchedule_success() throws Exception{
+    void createSchedule() throws Exception{
         // given
         CreateScheduleRequest request = createScheduleRequest();
-        memberRepository.save(createMember(null, "member1"));
 
         // when, then
         mockMvc.perform(post("/api/schedules")
@@ -243,7 +245,7 @@ public class ScheduleApiControllerTests extends ScheduleTest {
 
 
     @Test
-    @DisplayName("createSchedule(): 일정 만들기 시 필요 입력값이 다 안들어와 MethodArgumentNotValidException 발생")
+    @DisplayName("createSchedule(): 일정 만들기 시 필요 입력값이 다 안들어와 예외 발생")
     @WithMockUser(username = "test")
     void createSchedule_methodArgumentNotValidException() throws Exception{
         // given
@@ -259,7 +261,7 @@ public class ScheduleApiControllerTests extends ScheduleTest {
     }
 
     @Test
-    @DisplayName("createSchedule(): 일정 만들기 시 오늘 이전 날짜 입력으로 MethodArgumentNotValidException 발생")
+    @DisplayName("createSchedule(): 일정 만들기 시 오늘 이전 날짜 입력으로 예외 발생")
     @WithMockUser(username = "test")
     void createSchedulePastDate_methodArgumentNotValidException() throws Exception{
         // given
@@ -275,45 +277,29 @@ public class ScheduleApiControllerTests extends ScheduleTest {
     }
 
     @Test
-    @DisplayName("getScheduleDetail(): 일정 조회 성공")
+    @DisplayName("getScheduleDetail(): 일정 상세 조회 성공")
     @WithMockUser(username = "member1")
     void getScheduleDetail() throws Exception {
         // given
-        TravelSchedule schedule = travelScheduleRepository.save(createTravelSchedule(null, "테스트"));
+        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee2 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
 
-        Member member1 = memberRepository.save(createMember(null, "member1"));
-        Member member2 = memberRepository.save(createMember(null, "member2"));
+        member1.setTravelAttendeeList(List.of(attendee1, attendee2));
+        schedule1.setTravelAttendeeList(Arrays.asList(attendee1, attendee2));
 
-        List<TravelAttendee> attendeeList = new ArrayList<>();
-        attendeeList.add(createTravelAttendee(member1, schedule, AttendeeRole.AUTHOR));
-        attendeeList.add(createTravelAttendee(member2, schedule, AttendeeRole.AUTHOR));
-        travelAttendeeRepository.saveAll(attendeeList);
-
-        Country country = countryRepository.save(createCountry());
-        City city = cityRepository.save(createCity(country));
-        District district = districtRepository.save(createDistrict(city, "중구"));
-        ApiCategory apiCategory = apiCategoryRepository.save(createApiCategory());
-
-        TravelPlace travelPlace = travelPlaceRepository.save(createTravelPlace(null, country, city, district, apiCategory));
-        File file1 = fileRepository.save(createFile("test1", true));
-        File file2 = fileRepository.save(createFile("test2", false));;
-
-        TravelImage travelImage1 = travelImageRepository.save(createTravelImage(travelPlace, file1));
-        TravelImage travelImage2 = travelImageRepository.save(createTravelImage(travelPlace, file2));
-        List<TravelImage> travelImageList = Arrays.asList(travelImage1, travelImage2);
-
-        travelPlace.setTravelImageList(travelImageList);
 
         // when, then
-        mockMvc.perform(get("/api/schedules/{scheduleId}", schedule.getScheduleId())
+        mockMvc.perform(get("/api/schedules/{scheduleId}", schedule1.getScheduleId())
                 .param("page", "1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.data.scheduleName").value(schedule.getScheduleName()))
+                .andExpect(jsonPath("$.data.scheduleName").value(schedule1.getScheduleName()))
                 .andExpect(jsonPath("$.data.attendeeList[0].userId").exists())
                 .andExpect(jsonPath("$.data.placeList.totalElements").value(1))
-                .andExpect(jsonPath("$.data.placeList.content[0].district").value(district.getDistrictName()))
-                .andExpect(jsonPath("$.data.placeList.content[0].placeName").value(travelPlace.getPlaceName()))
-                .andExpect(jsonPath("$.data.placeList.content[0].thumbnailUrl").value(travelImageList.get(0).getFile().getS3ObjectUrl()));
+                .andExpect(jsonPath("$.data.placeList.content[0].district").value(travelPlace2.getDistrict().getDistrictName()))
+                .andExpect(jsonPath("$.data.placeList.content[0].placeName").value(travelPlace2.getPlaceName()))
+                .andExpect(jsonPath("$.data.placeList.content[0].thumbnailUrl").exists())
+                .andExpect(jsonPath("$.data.attendeeList[0].userId").value(member1.getUserId()))
+                .andExpect(jsonPath("$.data.attendeeList[0].role").value("AUTHOR"));
     }
 
     @Test
@@ -321,29 +307,28 @@ public class ScheduleApiControllerTests extends ScheduleTest {
     @WithMockUser(username = "member1")
     void getScheduleDetailWithoutData() throws Exception {
         // given
-        TravelSchedule schedule = travelScheduleRepository.save(createTravelSchedule(null,"테스트"));
+        travelPlace2.getDistrict().setDistrictName("성북구");
 
-        Member member1 = memberRepository.save(createMember(null, "member1"));
-        Member member2 = memberRepository.save(createMember(null, "member2"));
-
-        List<TravelAttendee> attendeeList = new ArrayList<>();
-        attendeeList.add(createTravelAttendee(member1, schedule, AttendeeRole.AUTHOR));
-        attendeeList.add(createTravelAttendee(member2, schedule, AttendeeRole.AUTHOR));
-        travelAttendeeRepository.saveAll(attendeeList);
+        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee2 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
+        
+        member1.setTravelAttendeeList(List.of(attendee1, attendee2));
+        schedule1.setTravelAttendeeList(Arrays.asList(attendee1, attendee2));
 
 
         // when, then
-        mockMvc.perform(get("/api/schedules/{scheduleId}", schedule.getScheduleId())
+        mockMvc.perform(get("/api/schedules/{scheduleId}", schedule1.getScheduleId())
                         .param("page", "1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.data.scheduleName").value(schedule.getScheduleName()))
-                .andExpect(jsonPath("$.data.attendeeList[0].userId").exists())
+                .andExpect(jsonPath("$.data.scheduleName").value(schedule1.getScheduleName()))
                 .andExpect(jsonPath("$.data.placeList.totalElements").value(0))
-                .andExpect(jsonPath("$.data.placeList.content").isEmpty());
+                .andExpect(jsonPath("$.data.placeList.content").isEmpty())
+                .andExpect(jsonPath("$.data.attendeeList[0].userId").value(member1.getUserId()))
+                .andExpect(jsonPath("$.data.attendeeList[0].role").value("AUTHOR"));
     }
 
     @Test
-    @DisplayName("getScheduleDetail(): 일정 조회 시 일정 데이터 존재하지 않아 DataNotFoundException 발생")
+    @DisplayName("getScheduleDetail(): 일정 조회 시 일정 데이터 존재하지 않아 예외 발생")
     @WithMockUser(username = "member1")
     void getScheduleDetail_dataNotFoundException() throws Exception {
         // given
@@ -352,54 +337,234 @@ public class ScheduleApiControllerTests extends ScheduleTest {
                         .param("page", "1"))
                 .andExpect(status().isNotFound())
                 .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value(ErrorCode.DATA_NOT_FOUND.getMessage()));
+                .andExpect(jsonPath("$.message").value(ErrorCode.SCHEDULE_NOT_FOUND.getMessage()));
     }
+
+    @Test
+    @DisplayName("updateSchedule(): 일정 수정")
+    @WithMockUser(username = "member1")
+    void updateSchedule() throws Exception {
+        // given
+        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
+
+        TravelRoute route1 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 1));
+        TravelRoute route2 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace2, 2));
+
+        member1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1)));
+        member2.setTravelAttendeeList(new ArrayList<>(List.of(attendee3)));
+        schedule1.setTravelRouteList(new ArrayList<>(List.of(route1, route2)));
+        schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee3)));
+
+        RouteRequest routeRequest1 = createRouteRequest(1, travelPlace1.getPlaceId());
+        RouteRequest routeRequest2 = createRouteRequest(2, travelPlace2.getPlaceId());
+
+        UpdateScheduleRequest request = createUpdateScheduleRequest(Arrays.asList(routeRequest1, routeRequest2));
+
+        // when
+        mockMvc.perform(patch("/api/schedules/{scheduleId}", schedule1.getScheduleId())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(toJsonString(request)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.success").value(true));
+
+        // then
+        assertEquals(schedule1.getScheduleName(), request.getScheduleName());
+        assertEquals(schedule1.getTravelRouteList().size(), 2);
+    }
+
+    @Test
+    @DisplayName("updateSchedule(): 일정 수정 시 일정 종료일을 오늘 날짜 이전으로 설정해 예외 발생")
+    @WithMockUser(username = "member1")
+    void updateSchedule_methodArgumentNotValidException() throws Exception {
+        // given
+        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
+
+        TravelRoute route1 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 1));
+        TravelRoute route2 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace2, 2));
+
+        member1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1)));
+        member2.setTravelAttendeeList(new ArrayList<>(List.of(attendee3)));
+        schedule1.setTravelRouteList(new ArrayList<>(List.of(route1, route2)));
+        schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee3)));
+
+        RouteRequest routeRequest1 = createRouteRequest(1, travelPlace1.getPlaceId());
+        RouteRequest routeRequest2 = createRouteRequest(2, travelPlace2.getPlaceId());
+
+        UpdateScheduleRequest request = createUpdateScheduleRequest(new ArrayList<>(List.of(routeRequest1, routeRequest2)));
+        request.setEndDate(LocalDate.now().minusDays(10));
+
+
+        // when
+        mockMvc.perform(patch("/api/schedules/{scheduleId}", schedule1.getScheduleId())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(toJsonString(request)))
+                .andExpect(status().isBadRequest())
+                .andExpect(jsonPath("$.success").value(false));
+
+    }
+
+    @Test
+    @DisplayName("updateSchedule(): 일정 수정 시 저장된 여행 루트 없는 경우")
+    @WithMockUser(username = "member1")
+    void updateScheduleNoSavedTravelRoute() throws Exception {
+        // given
+        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
+
+        member1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1)));
+        member2.setTravelAttendeeList(new ArrayList<>(List.of(attendee3)));
+        schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee3)));
+
+        RouteRequest routeRequest1 = createRouteRequest(1, travelPlace1.getPlaceId());
+        UpdateScheduleRequest request = createUpdateScheduleRequest(List.of(routeRequest1));
+
+        // when
+        mockMvc.perform(patch("/api/schedules/{scheduleId}", schedule1.getScheduleId())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(toJsonString(request)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.success").value(true));
+
+        // then
+        assertEquals(schedule1.getScheduleName(), request.getScheduleName());
+        assertEquals(schedule1.getTravelRouteList().size(), 1);
+    }
+
+    @Test
+    @DisplayName("updateSchedule(): 일정 수정 시 접근 권한이 없어 예외 발생")
+    @WithMockUser(username = "member3")
+    void updateScheduleForbiddenAccess_forbiddenScheduleException() throws Exception {
+        // given
+        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
+
+        TravelRoute route1 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 1));
+        TravelRoute route2 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace2, 2));
+
+        member1.setTravelAttendeeList(List.of(attendee1));
+        member2.setTravelAttendeeList(List.of(attendee3));
+        schedule1.setTravelRouteList(Arrays.asList(route1, route2));
+        schedule1.setTravelAttendeeList(Arrays.asList(attendee1, attendee3));
+
+        RouteRequest routeRequest1 = createRouteRequest(1, travelPlace1.getPlaceId());
+        UpdateScheduleRequest request = createUpdateScheduleRequest(List.of(routeRequest1));
+
+        // when
+        mockMvc.perform(patch("/api/schedules/{scheduleId}", schedule1.getScheduleId())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(toJsonString(request)))
+                .andExpect(status().isForbidden())
+                .andExpect(jsonPath("$.message").value(ErrorCode.FORBIDDEN_ACCESS_SCHEDULE.getMessage()));
+
+        // then
+        assertEquals(schedule1.getScheduleName(), "테스트1");
+        assertEquals(schedule1.getTravelRouteList().size(), 2);
+    }
+
+
+    @Test
+    @DisplayName("updateSchedule(): 일정 수정 시 수정 권한이 없어 예외 발생")
+    @WithMockUser(username = "member2")
+    void updateScheduleForbiddenEdit_forbiddenScheduleException() throws Exception {
+        // given
+        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
+
+        TravelRoute route1 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 1));
+        TravelRoute route2 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace2, 2));
+
+        member1.setTravelAttendeeList(List.of(attendee1));
+        member2.setTravelAttendeeList(List.of(attendee3));
+        schedule1.setTravelRouteList(Arrays.asList(route1, route2));
+        schedule1.setTravelAttendeeList(Arrays.asList(attendee1, attendee3));
+
+        RouteRequest routeRequest1 = createRouteRequest(1, travelPlace1.getPlaceId());
+        UpdateScheduleRequest request = createUpdateScheduleRequest(List.of(routeRequest1));
+
+        // when
+        mockMvc.perform(patch("/api/schedules/{scheduleId}", schedule1.getScheduleId())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(toJsonString(request)))
+                .andExpect(status().isForbidden())
+                .andExpect(jsonPath("$.message").value(ErrorCode.FORBIDDEN_EDIT_SCHEDULE.getMessage()));
+
+        // then
+        assertEquals(schedule1.getScheduleName(), "테스트1");
+        assertEquals(schedule1.getTravelRouteList().size(), 2);
+    }
+
 
     @Test
     @DisplayName("getTravelPlaces(): 여행지 조회 성공")
     @WithMockUser(username = "member1")
     void getTravelPlaces() throws Exception {
         // given
-        TravelSchedule schedule = travelScheduleRepository.save(createTravelSchedule(null,"테스트"));
-
-        Country country = countryRepository.save(createCountry());
-        City city = cityRepository.save(createCity(country));
-        District district = districtRepository.save(createDistrict(city, "중구"));
-        ApiCategory apiCategory = apiCategoryRepository.save(createApiCategory());
-
-        TravelPlace travelPlace = travelPlaceRepository.save(createTravelPlace(null, country, city, district, apiCategory));
-
-        File file1 = fileRepository.save(createFile("test1", true));
-        File file2 = fileRepository.save(createFile("test2", false));;
-
-        TravelImage travelImage1 = travelImageRepository.save(createTravelImage(travelPlace, file1));
-        TravelImage travelImage2 = travelImageRepository.save(createTravelImage(travelPlace, file2));
-        List<TravelImage> travelImageList = Arrays.asList(travelImage1, travelImage2);
-
-        travelPlace.setTravelImageList(travelImageList);
-
         // when, then
-        mockMvc.perform(get("/api/schedules/{scheduleId}/travels", schedule.getScheduleId())
+        mockMvc.perform(get("/api/schedules/{scheduleId}/travels", schedule1.getScheduleId())
                         .param("page", "1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.data.totalElements").value(1))
-                .andExpect(jsonPath("$.data.content[0].district").value(district.getDistrictName()))
-                .andExpect(jsonPath("$.data.content[0].placeName").value(travelPlace.getPlaceName()))
+                .andExpect(jsonPath("$.data.content[0].district").value(travelPlace2.getDistrict().getDistrictName()))
+                .andExpect(jsonPath("$.data.content[0].placeName").value(travelPlace2.getPlaceName()))
                 .andExpect(jsonPath("$.data.content[0].longitude").isNotEmpty())
                 .andExpect(jsonPath("$.data.content[0].latitude").isNotEmpty())
-                .andExpect(jsonPath("$.data.content[0].thumbnailUrl").value(travelImageList.get(0).getFile().getS3ObjectUrl()));
+                .andExpect(jsonPath("$.data.content[0].thumbnailUrl").exists());
     }
 
+    @Test
+    @DisplayName("deleteSchedule(): 일정 삭제")
+    @WithMockUser(username = "member1")
+    void deleteSchedule() throws Exception {
+        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
+
+        TravelRoute route1 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 1));
+        TravelRoute route2 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace2, 2));
+
+        member1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1)));
+        member2.setTravelAttendeeList(new ArrayList<>(List.of(attendee3)));
+        schedule1.setTravelRouteList(new ArrayList<>(List.of(route1, route2)));
+        schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee3)));
+
+        mockMvc.perform(delete("/api/schedules/{scheduleId}", schedule1.getScheduleId()))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.success").value(true));
+
+    }
+
+    @Test
+    @DisplayName("deleteSchedule(): 일정 삭제 시 삭제 권한이 없는 사용자 요청으로 예외 발생")
+    @WithMockUser(username = "member2")
+    void deleteSchedule_forbiddenScheduleException() throws Exception {
+        TravelAttendee attendee1 = travelAttendeeRepository.save(createTravelAttendee(member1, schedule1, AttendeeRole.AUTHOR, AttendeePermission.ALL));
+        TravelAttendee attendee3 = travelAttendeeRepository.save(createTravelAttendee(member2, schedule1, AttendeeRole.GUEST, AttendeePermission.READ));
+
+        TravelRoute route1 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 1));
+        TravelRoute route2 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace2, 2));
+
+        member1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1)));
+        member2.setTravelAttendeeList(new ArrayList<>(List.of(attendee3)));
+        schedule1.setTravelRouteList(new ArrayList<>(List.of(route1, route2)));
+        schedule1.setTravelAttendeeList(new ArrayList<>(List.of(attendee1, attendee3)));
+
+        mockMvc.perform(delete("/api/schedules/{scheduleId}", schedule1.getScheduleId()))
+                .andExpect(status().isForbidden())
+                .andExpect(jsonPath("$.success").value(false))
+                .andExpect(jsonPath("$.message").value(ErrorCode.FORBIDDEN_DELETE_SCHEDULE.getMessage()));
+
+    }
 
     @Test
     @DisplayName("getTravelPlaces(): 여행지 조회 시 여행지 데이터 존재하지 않는 경우")
     @WithMockUser(username = "member1")
     void getTravelPlacesWithoutData() throws Exception {
         // given
-        TravelSchedule schedule = travelScheduleRepository.save(createTravelSchedule(null,"테스트"));
-
+        travelPlaceRepository.deleteAll();
+        
         // when, then
-        mockMvc.perform(get("/api/schedules/{scheduleId}/travels", schedule.getScheduleId())
+        mockMvc.perform(get("/api/schedules/{scheduleId}/travels", schedule1.getScheduleId())
                         .param("page", "1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.data.totalElements").value(0))
@@ -408,7 +573,7 @@ public class ScheduleApiControllerTests extends ScheduleTest {
 
 
     @Test
-    @DisplayName("getTravelPlaces(): 여행지 조회 시 여행지 데이터 존재하지 않아 DataNotFoundException 발생")
+    @DisplayName("getTravelPlaces(): 여행지 조회 시 일정 데이터 존재하지 않아 예외 발생")
     @WithMockUser(username = "member1")
     void getTravelPlaces_dataNotFoundException() throws Exception {
         // given
@@ -417,7 +582,7 @@ public class ScheduleApiControllerTests extends ScheduleTest {
                         .param("page", "1"))
                 .andExpect(status().isNotFound())
                 .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value(ErrorCode.DATA_NOT_FOUND.getMessage()));
+                .andExpect(jsonPath("$.message").value(ErrorCode.SCHEDULE_NOT_FOUND.getMessage()));
     }
 
 
@@ -426,42 +591,17 @@ public class ScheduleApiControllerTests extends ScheduleTest {
     @WithMockUser(username = "member1")
     void searchTravelPlaces() throws Exception {
         // given
-        TravelSchedule schedule = travelScheduleRepository.save(createTravelSchedule(null,"테스트"));
-
-        Country country = countryRepository.save(createCountry());
-        City city = cityRepository.save(createCity(country));
-        District district1 = districtRepository.save(createDistrict(city, "강남구"));
-        District district2 = districtRepository.save(createDistrict(city, "중구"));
-        ApiCategory apiCategory = apiCategoryRepository.save(createApiCategory());
-
-        TravelPlace travelPlace1 = travelPlaceRepository.save(createTravelPlace(null, country, city, district1, apiCategory));
-        TravelPlace travelPlace2 = travelPlaceRepository.save(createTravelPlace(null, country, city, district2, apiCategory));
-
-        File file1 = fileRepository.save(createFile("test1", true));
-        File file2 = fileRepository.save(createFile("test2", false));;
-
-        TravelImage travelImage1 = travelImageRepository.save(createTravelImage(travelPlace1, file1));
-        TravelImage travelImage2 = travelImageRepository.save(createTravelImage(travelPlace1, file2));
-        List<TravelImage> travelImageList1 = Arrays.asList(travelImage1, travelImage2);
-
-        TravelImage travelImage3 = travelImageRepository.save(createTravelImage(travelPlace2, file1));
-        TravelImage travelImage4 = travelImageRepository.save(createTravelImage(travelPlace2, file2));
-        List<TravelImage> travelImageList2 = Arrays.asList(travelImage3, travelImage4);
-
-        travelPlace1.setTravelImageList(travelImageList1);
-        travelPlace2.setTravelImageList(travelImageList2);
-
         // when, then
-        mockMvc.perform(get("/api/schedules/{scheduleId}/travels/search", schedule.getScheduleId())
+        mockMvc.perform(get("/api/schedules/{scheduleId}/travels/search", schedule1.getScheduleId())
                         .param("page", "1")
                         .param("keyword", "강남"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.data.totalElements").value(1))
-                .andExpect(jsonPath("$.data.content[0].district").value(district1.getDistrictName()))
+                .andExpect(jsonPath("$.data.content[0].district").value(travelPlace1.getDistrict().getDistrictName()))
                 .andExpect(jsonPath("$.data.content[0].placeName").value(travelPlace1.getPlaceName()))
                 .andExpect(jsonPath("$.data.content[0].longitude").isNotEmpty())
                 .andExpect(jsonPath("$.data.content[0].latitude").isNotEmpty())
-                .andExpect(jsonPath("$.data.content[0].thumbnailUrl").value(travelImageList1.get(0).getFile().getS3ObjectUrl()));
+                .andExpect(jsonPath("$.data.content[0].thumbnailUrl").exists());
     }
 
     @Test
@@ -469,10 +609,8 @@ public class ScheduleApiControllerTests extends ScheduleTest {
     @WithMockUser(username = "member1")
     void searchTravelPlacesWithoutData() throws Exception {
         // given
-        TravelSchedule schedule = travelScheduleRepository.save(createTravelSchedule(null,"테스트"));
-
         // when, then
-        mockMvc.perform(get("/api/schedules/{scheduleId}/travels/search", schedule.getScheduleId())
+        mockMvc.perform(get("/api/schedules/{scheduleId}/travels/search", schedule1.getScheduleId())
                         .param("page", "1")
                         .param("keyword", "ㅁㄴㅇㄹ"))
                 .andExpect(status().isOk())
@@ -482,7 +620,7 @@ public class ScheduleApiControllerTests extends ScheduleTest {
 
 
     @Test
-    @DisplayName("searchTravelPlaces(): 여행지 검색 시 일정 데이터 존재하지 않아 DataNotFoundException 발생")
+    @DisplayName("searchTravelPlaces(): 여행지 검색 시 일정 데이터 존재하지 않아 예외 발생")
     @WithMockUser(username = "member1")
     void searchTravelPlaces_dataNotFoundException() throws Exception {
         // given
@@ -492,7 +630,7 @@ public class ScheduleApiControllerTests extends ScheduleTest {
                         .param("keyword", "ㅁㄴㅇㄹ"))
                 .andExpect(status().isNotFound())
                 .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value(ErrorCode.DATA_NOT_FOUND.getMessage()));
+                .andExpect(jsonPath("$.message").value(ErrorCode.SCHEDULE_NOT_FOUND.getMessage()));
     }
 
     @Test
@@ -500,45 +638,20 @@ public class ScheduleApiControllerTests extends ScheduleTest {
     @WithMockUser(username = "member1")
     void getTravelRoutes() throws Exception {
         // given
-        TravelSchedule schedule = travelScheduleRepository.save(createTravelSchedule(null,"테스트"));
-
-        Country country = countryRepository.save(createCountry());
-        City city = cityRepository.save(createCity(country));
-        District district1 = districtRepository.save(createDistrict(city, "강남구"));
-        District district2 = districtRepository.save(createDistrict(city, "중구"));
-        ApiCategory apiCategory = apiCategoryRepository.save(createApiCategory());
-
-        TravelPlace travelPlace1 = travelPlaceRepository.save(createTravelPlace(null, country, city, district1, apiCategory));
-        TravelPlace travelPlace2 = travelPlaceRepository.save(createTravelPlace(null, country, city, district2, apiCategory));
-
-        File file1 = fileRepository.save(createFile("test1", true));
-        File file2 = fileRepository.save(createFile("test2", false));;
-
-        TravelImage travelImage1 = travelImageRepository.save(createTravelImage(travelPlace1, file1));
-        TravelImage travelImage2 = travelImageRepository.save(createTravelImage(travelPlace1, file2));
-        List<TravelImage> travelImageList1 = Arrays.asList(travelImage1, travelImage2);
-
-        TravelImage travelImage3 = travelImageRepository.save(createTravelImage(travelPlace2, file1));
-        TravelImage travelImage4 = travelImageRepository.save(createTravelImage(travelPlace2, file2));
-        List<TravelImage> travelImageList2 = Arrays.asList(travelImage3, travelImage4);
-
-        travelPlace1.setTravelImageList(travelImageList1);
-        travelPlace2.setTravelImageList(travelImageList2);
-
-        TravelRoute route1 = travelRouteRepository.save(createTravelRoute(schedule, travelPlace1, 1));
-        TravelRoute route2 = travelRouteRepository.save(createTravelRoute(schedule, travelPlace1, 2));
-        TravelRoute route3 = travelRouteRepository.save(createTravelRoute(schedule, travelPlace2, 3));
+        TravelRoute route1 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 1));
+        TravelRoute route2 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace1, 2));
+        TravelRoute route3 = travelRouteRepository.save(createTravelRoute(schedule1, travelPlace2, 3));
 
         List<TravelRoute> travelRouteListAll = Arrays.asList(route1, route2, route3);
         List<TravelRoute> travelRouteList1 = Arrays.asList(route1, route2);
         List<TravelRoute> travelRouteList2 = List.of(route3);
 
-        schedule.setTravelRouteList(travelRouteListAll);
+        schedule1.setTravelRouteList(travelRouteListAll);
         travelPlace1.setTravelRouteList(travelRouteList1);
         travelPlace2.setTravelRouteList(travelRouteList2);
 
         // when, then
-        mockMvc.perform(get("/api/schedules/{scheduleId}/routes", schedule.getScheduleId())
+        mockMvc.perform(get("/api/schedules/{scheduleId}/routes", schedule1.getScheduleId())
                         .param("page", "1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.data.totalElements").value(3))
@@ -555,10 +668,8 @@ public class ScheduleApiControllerTests extends ScheduleTest {
     @WithMockUser(username = "member1")
     void getTravelRoutesWithoutData() throws Exception {
         // given
-        TravelSchedule schedule = travelScheduleRepository.save(createTravelSchedule(null,"테스트"));
-
         // when, then
-         mockMvc.perform(get("/api/schedules/{scheduleId}/routes", schedule.getScheduleId())
+         mockMvc.perform(get("/api/schedules/{scheduleId}/routes", schedule1.getScheduleId())
                                 .param("page", "1"))
                         .andExpect(status().isOk())
                         .andExpect(jsonPath("$.data.totalElements").value(0))
@@ -566,7 +677,7 @@ public class ScheduleApiControllerTests extends ScheduleTest {
     }
 
     @Test
-    @DisplayName("getTravelRoutes(): 여행 루트 조회 시 일정을 찾을 수 없어 DataNotFoundException 발생")
+    @DisplayName("getTravelRoutes(): 여행 루트 조회 시 일정 데이터 존재하지 않아 예외 발생")
     @WithMockUser(username = "member1")
     void getTravelRoutes_dataNotFoundException() throws Exception {
         // given
@@ -575,7 +686,7 @@ public class ScheduleApiControllerTests extends ScheduleTest {
                         .param("page", "1"))
                 .andExpect(status().isNotFound())
                 .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value(ErrorCode.DATA_NOT_FOUND.getMessage()));
+                .andExpect(jsonPath("$.message").value(ErrorCode.SCHEDULE_NOT_FOUND.getMessage()));
     }
 
 
